# termi

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
scripts/: termi-hook.cmd  termi-hook.ps1
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: core.json  default.json  dialog.json  notification.json  opener.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  store.rs
src-tauri/src/commands/: debug_log.rs  hooks.rs  mod.rs  project.rs  settings.rs  terminal.rs  theme.rs  validation.rs
src-tauri/src/models/: mod.rs  project.rs  settings.rs  terminal.rs  theme.rs
src-tauri/src/services/: debug_log.rs  event_watcher.rs  mod.rs  notifier.rs  reminder.rs
src-tauri/src/services/process_manager/: attach.rs  hooks.rs  hwnd.rs  input.rs  mod.rs  monitoring.rs  tests.rs  types.rs  wt_settings.rs
src/lib/: constants.ts  types.ts
src/lib/api/: invoke.ts
src/lib/components/: AttachModal.svelte  Icon.svelte  ProjectForm.svelte  ProjectItem.svelte  SettingsPanel.svelte  Sidebar.svelte  StatusBadge.svelte  TabBar.svelte  TerminalList.svelte  TerminalTab.svelte
src/lib/components/settings/: DebugLogSection.svelte  HookSection.svelte  (+2 more)
src/lib/i18n/: en.ts  i18n.test.ts  index.svelte.ts  ko.ts  types.ts
src/lib/stores/: projects.svelte.ts  projects.test.ts  settings.svelte.ts  terminals.svelte.ts  terminals.test.ts  theme.svelte.ts  theme.test.ts
src/lib/utils/: error.ts
