[package]
name = "termi"
version = "0.1.0"
description = "터미널 세션 관리 도구 for Windows"
authors = ["nhjnh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
thiserror = "2"
uuid = { version = "1.22.0", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-winrt-notification = "0.7"
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
uiautomation = "0.24"
notify = "8"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3.26.0"
tauri = { version = "2", features = ["test"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

